# hyprspin

./: Cargo.toml  README.md  hyprspin.lua
src/: config.rs  hyprland.rs  main.rs  sensor.rs
