[package]
name = "hyprspin"
version = "1.0.0"
edition = "2024"
authors = ["Nareg der Levonean"]

[dependencies]
tokio = { version = "1", features = ["full", "rt-multi-thread"] }
zbus = "4.0"
futures-util = "0.3"
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
hyprland = "0.4.0-beta.3"
mlua = { version = "0.9", features = ["lua54", "send"] }
